--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 plugins {
-    id 'org.springframework.boot' version '2.2.4.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-    id 'java'
-    id 'net.ltgt.apt' version '0.8'
+    id "java"
+    id "org.springframework.boot" version "2.2.6.RELEASE"
+    id "io.spring.dependency-management" version "1.0.9.RELEASE"
+    id "net.ltgt.apt" version "0.20"
 }
 
 ext {
     mapstructVersion = "1.3.1.Final"
 }
 
-group = 'guru.springframework'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+group = "guru.springframework"
+version = "0.0.1-SNAPSHOT"
+sourceCompatibility = "11"
 
 configurations {
     developmentOnly
@@ -34,18 +34,18 @@ dependencies {
             "org.springframework.boot:spring-boot-starter-web",
             "org.mapstruct:mapstruct:$mapstructVersion"
     )
-    compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'com.h2database:h2'
+    compileOnly "org.projectlombok:lombok"
+    developmentOnly "org.springframework.boot:spring-boot-devtools"
+    runtimeOnly "com.h2database:h2"
     annotationProcessor(
             "org.projectlombok:lombok",
             "org.mapstruct:mapstruct-processor:$mapstructVersion"
     )
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-        exclude group: 'junit', module: 'junit'
+    testImplementation("org.springframework.boot:spring-boot-starter-test") {
+        exclude group: "org.junit.vintage", module: "junit-vintage-engine"
     }
-    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.2.4'
+    testImplementation "org.mockito:mockito-junit-jupiter:3.3.3"
+    testAnnotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
 }
 
 test {
