--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,11 @@ dependencies {
     )
     compileOnly "org.projectlombok:lombok"
     developmentOnly "org.springframework.boot:spring-boot-devtools"
-    runtimeOnly "com.h2database:h2"
+    runtimeOnly(
+            "org.springframework.boot:spring-boot-devtools",
+            "com.h2database:h2",
+            "mysql:mysql-connector-java:8.0.16"
+    )
     annotationProcessor(
             "org.projectlombok:lombok",
             "org.mapstruct:mapstruct-processor:$mapstructVersion"
