--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+# Current profile
+spring.profiles.active=localmysql
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
-spring.datasource.initialization-mode=EMBEDDED
 spring.cache.jcache.config=classpath:ehcache.xml
+# H2 settings
+spring.datasource.initialization-mode=EMBEDDED
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.h2.console.enabled=true
