--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,21 @@
 plugins {
     id "java"
-    id "org.springframework.boot" version "2.2.6.RELEASE"
+    id "org.springframework.boot" version "2.3.0.RELEASE"
     id "io.spring.dependency-management" version "1.0.9.RELEASE"
     id "net.ltgt.apt" version "0.20"
 }
 
 ext {
     mapstructVersion = "1.3.1.Final"
+    mockitoVersion = "3.3.3"
+    mysqlConnectorJavaVersion = "8.0.16"
 }
 
 group = "guru.springframework"
 version = "0.0.1-SNAPSHOT"
-sourceCompatibility = "11"
+sourceCompatibility = "1.8"
 
 configurations {
-    developmentOnly
-    runtimeClasspath {
-        extendsFrom developmentOnly
-    }
     compileOnly {
         extendsFrom annotationProcessor
     }
@@ -30,9 +28,10 @@ repositories {
 dependencies {
     implementation(
             "org.springframework.boot:spring-boot-starter-actuator",
+            "org.springframework.boot:spring-boot-starter-cache",
             "org.springframework.boot:spring-boot-starter-data-jpa",
             "org.springframework.boot:spring-boot-starter-web",
-            "org.springframework.boot:spring-boot-starter-cache",
+            "org.springframework.boot:spring-boot-starter-validation",
             "javax.cache:cache-api",
             "org.ehcache:ehcache",
             "org.mapstruct:mapstruct:$mapstructVersion"
@@ -42,7 +41,7 @@ dependencies {
     runtimeOnly(
             "org.springframework.boot:spring-boot-devtools",
             "com.h2database:h2",
-            "mysql:mysql-connector-java:8.0.16"
+            "mysql:mysql-connector-java:$mysqlConnectorJavaVersion"
     )
     annotationProcessor(
             "org.projectlombok:lombok",
@@ -51,7 +50,7 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude group: "org.junit.vintage", module: "junit-vintage-engine"
     }
-    testImplementation "org.mockito:mockito-junit-jupiter:3.3.3"
+    testImplementation "org.mockito:mockito-junit-jupiter:$mockitoVersion"
     testAnnotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
 }
 
