--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# Current profile
-spring.profiles.active=localmysql
+# Current profile, uncomment to use MySQl
+#spring.profiles.active=localmysql
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
 spring.cache.jcache.config=classpath:ehcache.xml
 # H2 settings
