--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 # Current profile, uncomment to use MySQl
 #spring.profiles.active=localmysql
+
+logging.level.guru.springframework=debug
+
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
 spring.cache.jcache.config=classpath:ehcache.xml
+
 # H2 settings
 spring.datasource.initialization-mode=EMBEDDED
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.h2.console.enabled=true
+
 # defaults for this docker image - vromero/activemq-artemis
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
