adding eureka client

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ ext {
     mapstructVersion = "1.3.1.Final"
     mockitoVersion = "3.3.3"
     mysqlConnectorJavaVersion = "8.0.16"
+    springCloudVersion = "Hoxton.SR6"
 }
 
 group = "guru.springframework"
@@ -33,6 +34,7 @@ dependencies {
             "org.springframework.boot:spring-boot-starter-data-jpa",
             "org.springframework.boot:spring-boot-starter-validation",
             "org.springframework.boot:spring-boot-starter-web",
+            "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client",
             "javax.cache:cache-api",
             "org.ehcache:ehcache",
             "org.mapstruct:mapstruct:$mapstructVersion"
@@ -53,6 +55,12 @@ dependencies {
     }
     testImplementation "org.mockito:mockito-junit-jupiter:$mockitoVersion"
     testAnnotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 test {
