--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Current profile, uncomment to use MySQl
 #spring.profiles.active=localmysql
 
+spring.application.name=beer-service
 logging.level.guru.springframework=debug
 
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
