--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Current profile, uncomment to use MySQl
 #spring.profiles.active=localmysql
+spring.profiles.active=local-discovery
 
 spring.application.name=beer-service
 logging.level.guru.springframework=debug
