--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
             "org.springframework.boot:spring-boot-starter-data-jpa",
             "org.springframework.boot:spring-boot-starter-validation",
             "org.springframework.boot:spring-boot-starter-web",
+            "org.springframework.cloud:spring-cloud-starter-config",
             "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client",
             "org.springframework.cloud:spring-cloud-starter-openfeign",
             "javax.cache:cache-api",
