--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-# Current profile, uncomment to use MySQl
-#spring.profiles.active=localmysql
-spring.profiles.active=local-discovery
 spring.application.name=beer-service
 
 logging.level.guru.springframework=debug
@@ -16,3 +13,8 @@ spring.h2.console.enabled=true
 # defaults for this docker image - vromero/activemq-artemis
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+spring.zipkin.baseUrl= http://localhost:9411/
+
+# Spring Data hangs when not set under Spring Boot 2.3.0
+spring.data.jpa.repositories.bootstrap-mode=default
