--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ ext {
 	set("mapstructVersion", "1.3.1.Final")
 	set("mockitoVersion", "3.3.3")
 	set("springCloudVersion", "Hoxton.SR6")
+	set("logstashLogbackEncoderVersion", "6.4")
 }
 
 configurations {
@@ -39,7 +40,8 @@ dependencies {
 			"org.springframework.cloud:spring-cloud-starter-zipkin",
 			"javax.cache:cache-api",
 			"org.ehcache:ehcache",
-			"org.mapstruct:mapstruct:$mapstructVersion"
+			"org.mapstruct:mapstruct:$mapstructVersion",
+			"net.logstash.logback:logstash-logback-encoder:$logstashLogbackEncoderVersion"
 	)
 	compileOnly "org.projectlombok:lombok"
 	developmentOnly "org.springframework.boot:spring-boot-devtools"
