--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.h2.console.enabled=true
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
-spring.zipkin.baseUrl= http://localhost:9411/
+spring.zipkin.enabled=false
 
 # Spring Data hangs when not set under Spring Boot 2.3.0
 spring.data.jpa.repositories.bootstrap-mode=default
