adding username and password for config server & updating readme

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -4,4 +4,4 @@
 # local-discovery - EnableDiscoveryClient
 
 # It is necessary to put this property here because otherwise (if it's in applicatioin.properties) we are requesting the default profile from the config server.
-spring.profiles.active=localmysql-config-repo, local-discovery
+#spring.profiles.active=local-secure, local-discovery
