configuring eureka security creds

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -3,5 +3,7 @@
 # localmysql-config-repo - using local MySQl DB (loading from config service)
 # local-discovery - EnableDiscoveryClient
 
-# It is necessary to put this property here because otherwise (if it's in applicatioin.properties) we are requesting the default profile from the config server.
-#spring.profiles.active=local-secure, local-discovery
+# It is necessary to put this property here because otherwise (if it's in application.properties) we are requesting the default profile from the config server.
+spring.profiles.active=local-secure, local-discovery
+
+eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
