configuring RestTemplate for http basic auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=beer-service
 logging.level.guru.springframework=debug
 
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
+sfg.brewery.inventory-user=user
+sfg.brewery.inventory-password=password
+
 spring.cache.jcache.config=classpath:ehcache.xml
 
 # H2 settings
