--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,9 +1,11 @@
 # Profiles
 # localmysql - using local MySQl DB
-# localmysql-config-repo - using local MySQl DB (loading from config service)
+# localmysql-config-repo - using local MySQl DB (from config service)
 # local-discovery - EnableDiscoveryClient
+# local-secure - encrypted creds for MySQl DB (from config service)
+# dosql - digitalocean MySQl DB
 
 # It is necessary to put this property here because otherwise (if it's in application.properties) we are requesting the default profile from the config server.
-spring.profiles.active=local-secure, local-discovery
+#spring.profiles.active=
 
 eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
